tests/checks/src/bad_modifiers.erlt
%% Copyright (c) Facebook, Inc. and its affiliates.
%%
%% Licensed under the Apache License, Version 2.0 (the "License");
%% you may not use this file except in compliance with the License.
%% You may obtain a copy of the License at
%%
%%     http://www.apache.org/licenses/LICENSE-2.0
%%
%% Unless required by applicable law or agreed to in writing, software
%% distributed under the License is distributed on an "AS IS" BASIS,
%% WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
%% See the License for the specific language governing permissions and
%% limitations under the License.


-module(bad_modifiers).

[unchecked]
[opaque]

-export([test/0]).

[opaque, opaque]
-type x() :: integer().

[opaque, unchecked, special]
-type y() :: integer().

[unchecked]
-type z() :: integer().

[unchecked,]
-type z1() :: integer().

[]
-type z2() :: integer().

[fantastic]
test() ->
    test1().

-spec test1() -> x().
[unchecked, unchecked]
test1() ->
    1.

-spec test2() -> {y(), z()}.
[opaque]
test2() ->
    {1,2}.